<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity12">


    <TextView
        android:id="@+id/logotext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="50sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/regular"
        android:textColor="@color/items_color"
        android:background="@color/button"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/diet"
        android:textColor="@color/items_color"
        android:background="@color/button"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/vege"
        android:textColor="@color/items_color"
        android:background="@color/button"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:layout_marginTop="25dp"
        />


</LinearLayout>