<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".ard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="2"
        android:alignmentMode="alignMargins">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/hassan" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/items_color"
        android:text="@string/dish_name" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:progressTint="@color/button"
        android:rating="4"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/dish_desc" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/serve_num"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="@color/carrotdark"
        android:text="@string/dish_price" />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"

        android:layout_height="90dp" >



        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hassan"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="110dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/chief_name" />

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="عرض"
            android:textColor="@color/items_color"
            android:background="@color/button"/>


        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginRight="110dp"
            android:numStars="5"
            android:progressTint="@color/carrotdark"
            android:rating="5"
            android:stepSize="1" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textColor="@color/items_color"
        android:backgroundTint="@color/carrotdark"
        android:text="@string/buy_btn" />
    >
    </GridLayout>
    </ScrollView>

</LinearLayout>