<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="50sp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/emailfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/usernameFIELD" />

        <TextView
            android:id="@+id/emaillabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="@color/items_color"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >


        <EditText
            android:id="@+id/passwordfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/passwordFIELD" />

        <TextView
            android:id="@+id/passwordlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/items_color"/>






    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="عرض كلمه المرور"
            android:layout_alignParentLeft="true"
            android:textColor="@color/items_color"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/items_color"

            />
    </RelativeLayout>







    <Button
        android:id="@+id/button1"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:textColor="@color/items_color"
        android:text="دخول"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@color/button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="ليس لديك حساب؟ "
        android:textColor="@color/items_color"
        android:textSize="20sp"


        />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="حساب جديد"
        android:textAllCaps="false"
        android:background="@color/button"
        android:textSize="20sp"
        android:textColor="@color/items_color"
        />


</LinearLayout>